# 9c-headless-metric-gql-aggregator

./: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: push_docker_image.yaml
