[tool.poetry]
name = "9c-headless-metrics-aggregator"
version = "0.1.0"
description = ""
authors = ["moreal <dev.moreal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
requests = "^2.26.0"
grequests = "^0.6.0"
uvicorn = "^0.16.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
